commit few changes on project 01 repository

--- a/Project-1-Data-Modeling-with-Postgres/test.ipynb
+++ b/Project-1-Data-Modeling-with-Postgres/test.ipynb
@@ -74,7 +74,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "## Query to evaluate if the project has met the project requirement\n",
+    "%sql SELECT * FROM songplays WHERE artist_id <> 'None';"
+   ],
    "outputs": [],
    "metadata": {}
   }
