commit README's and functions filefor Project 02

--- a/Project-2-Data-Modeling-with-Apache-Cassandra/Project-2-DM-with-Apache-Cassandra.ipynb
+++ b/Project-2-Data-Modeling-with-Apache-Cassandra/Project-2-DM-with-Apache-Cassandra.ipynb
@@ -33,7 +33,8 @@
     "import glob\n",
     "import numpy as np\n",
     "import json\n",
-    "import csv"
+    "import csv\n",
+    "from functions_p2 import create_table, insert_table "
    ],
    "outputs": [],
    "metadata": {}
@@ -354,19 +355,30 @@
    "cell_type": "code",
    "execution_count": 8,
    "source": [
-    "# Creating the table artist_library for the First Query\n",
-    "query = \"CREATE TABLE IF NOT EXISTS artist_library \"\n",
+    "# List to save all table names\n",
+    "table_list = []\n",
     "\n",
-    "query += \"(session_id int, item_in_session int, artist_name varchar, song_title text, \\\n",
-    "    song_length decimal, PRIMARY KEY((session_id), item_in_session))\"\n",
+    "# Distionary with columns and atributes to insert on queries\n",
+    "artist_library_dict = {\n",
+    "    'session_id': ['int', 8],\n",
+    "    'item_in_session': ['int', 3],\n",
+    "    'artist_name': ['varchar', 0],\n",
+    "    'song_title': ['text', 9],\n",
+    "    'song_length': ['decimal', 5]\n",
+    "}\n",
     "\n",
-    "try:\n",
-    "    # Creating the table for query 01\n",
-    "    session.execute(query)\n",
-    "    print('Table artist_library created with success.')\n",
-    "except Exception as e:\n",
-    "    # Printing EXCEPTION in case of error\n",
-    "    print(e)                 "
+    "\n",
+    "table_name = 'artist_library' # instanting artist_library to table_name\n",
+    "\n",
+    "# appending 'artist_library' on table_list\n",
+    "table_list.append(table_name)\n",
+    "\n",
+    "artist_library_pm = ['session_id'] # List with partion key for artist_library table\n",
+    "\n",
+    "artist_library_cm = ['item_in_session'] # List with cluster key for artist_library table \n",
+    "\n",
+    "# Running function to create table artist_library on keyspace sparkify_ks\n",
+    "create_table(table_name, artist_library_dict, artist_library_pm, artist_library_cm, session)"
    ],
    "outputs": [
     {
@@ -390,47 +402,10 @@
    "cell_type": "code",
    "execution_count": 9,
    "source": [
-    "file = 'event_datafile_new.csv'\n",
+    "file = 'event_datafile_new.csv' # file path\n",
     "\n",
-    "# Opening event_datafile_new.csv\n",
-    "with open(file, encoding = 'utf8') as f:\n",
-    "    csvreader = csv.reader(f)\n",
-    "    next(csvreader) # skip header\n",
-    "\n",
-    "    # Loop to pass in each line of the csv file\n",
-    "    for line in csvreader:\n",
-    "        # Assigning the INSERT statement into the `query` variable\n",
-    "        query = \"\"\"\n",
-    "            INSERT INTO artist_library \n",
-    "                (\n",
-    "                    session_id, \n",
-    "                    item_in_session, \n",
-    "                    artist_name, \n",
-    "                    song_title, \n",
-    "                    song_length\n",
-    "                )\n",
-    "        \"\"\"\n",
-    "        query += \" VALUES (%s, %s, %s, %s, %s)\"\n",
-    "        \n",
-    "        # Assigning the right values for each column.\n",
-    "        try:\n",
-    "            # Inserting values on table artist_library\n",
-    "            session.execute(\n",
-    "                query, \n",
-    "                (\n",
-    "                    int(line[8]), \n",
-    "                    int(line[3]), \n",
-    "                    line[0], \n",
-    "                    line[9], \n",
-    "                    float(line[5])\n",
-    "                )\n",
-    "            )\n",
-    "\n",
-    "        except Exception as e:\n",
-    "            # Printing EXCEPTION in case of error\n",
-    "            print(e)\n",
-    "\n",
-    "print('Values inserted on table artist_library.')"
+    "# Running function to insert values on table artist_library\n",
+    "insert_table(file, table_name, artist_library_dict, session)"
    ],
    "outputs": [
     {
@@ -441,9 +416,7 @@
      ]
     }
    ],
-   "metadata": {
-    "scrolled": false
-   }
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
@@ -523,18 +496,27 @@
    "cell_type": "code",
    "execution_count": 11,
    "source": [
-    "query = \"CREATE TABLE IF NOT EXISTS user_library \"\n",
+    "# Distionary with columns and atributes to insert on queries\n",
+    "user_library_dict = {\n",
+    "    'user_id': ['int', 10],\n",
+    "    'session_id': ['int', 8],\n",
+    "    'item_in_session': ['int', 3],\n",
+    "    'first_name': ['varchar', 1],\n",
+    "    'last_name': ['varchar', 4],\n",
+    "    'artist_name': ['varchar', 0],\n",
+    "    'song_title': ['text', 9],\n",
+    "}\n",
     "\n",
-    "query += \"(user_id int, session_id int, item_in_session int, first_name varchar, last_name varchar, \\\n",
-    "    artist_name varchar, song_title text, PRIMARY KEY((user_id, session_id), item_in_session))\"\n",
+    "table_name = 'user_library' # instanting user_library to table_name\n",
     "\n",
-    "try:\n",
-    "    # Creating table user_library\n",
-    "    session.execute(query)\n",
-    "    print('Table user_library created with success.')\n",
-    "except Exception as e:\n",
-    "    # Printing EXCEPTION in case of error\n",
-    "    print(e)        "
+    "# appending 'user_library' on table_list\n",
+    "table_list.append(table_name)\n",
+    "\n",
+    "user_library_pm = ['user_id', 'session_id'] # List with partion key for user_library table\n",
+    "user_library_cm = ['item_in_session'] # List with cluster key for user_library table \n",
+    "\n",
+    "# Running function to create table user_library on keyspace sparkify_ks\n",
+    "create_table(table_name, user_library_dict, user_library_pm, user_library_cm, session)"
    ],
    "outputs": [
     {
@@ -558,47 +540,8 @@
    "cell_type": "code",
    "execution_count": 12,
    "source": [
-    "# Opening event_datafile_new.csv\n",
-    "with open(file, encoding = 'utf-8') as f:\n",
-    "    csvreader = csv.reader(f)\n",
-    "    next(csvreader)\n",
-    "\n",
-    "    for line in csvreader:\n",
-    "        # Assigning the INSERT statement into the `query` variable\n",
-    "        query = \"\"\"\n",
-    "            INSERT INTO user_library\n",
-    "                (\n",
-    "                    user_id,\n",
-    "                    session_id,\n",
-    "                    item_in_session,\n",
-    "                    first_name,\n",
-    "                    last_name,\n",
-    "                    artist_name,\n",
-    "                    song_title\n",
-    "                )\n",
-    "        \"\"\" \n",
-    "\n",
-    "        query += \" VALUES (%s, %s, %s, %s, %s, %s, %s)\" \n",
-    "\n",
-    "        # Assigning the right values for each column on table user_library\n",
-    "        try:\n",
-    "            # Inserting values on table user_library\n",
-    "            session.execute(\n",
-    "                query,\n",
-    "                (\n",
-    "                    int(line[10]),\n",
-    "                    int(line[8]),\n",
-    "                    int(line[3]),\n",
-    "                    line[1],\n",
-    "                    line[4],\n",
-    "                    line[0],\n",
-    "                    line[9]\n",
-    "                )\n",
-    "            )\n",
-    "        except Exception as e:\n",
-    "            # Printing EXCEPTION in case of error\n",
-    "            print(e)\n",
-    "print('Values inserted on table user_library.')"
+    "# Running function to insert values on table artist_library\n",
+    "insert_table(file, table_name, user_library_dict, session)"
    ],
    "outputs": [
     {
@@ -686,25 +629,32 @@
    "cell_type": "code",
    "execution_count": 14,
    "source": [
-    "query = \"CREATE TABLE IF NOT EXISTS users_history \"\n",
+    "# Distionary with columns and atributes to insert on queries\n",
+    "user_history_dict = {\n",
+    "    'song_title': ['text', 9],\n",
+    "    'user_id': ['int', 10],\n",
+    "    'first_name': ['varchar', 1],\n",
+    "    'last_name': ['varchar', 4]  \n",
+    "}\n",
     "\n",
-    "query += \"(song_title text, user_id int, first_name varchar, last_name varchar, \\\n",
-    "    PRIMARY KEY(song_title, user_id))\"\n",
+    "table_name = 'user_history' # instanting user_library to table_name\n",
     "\n",
-    "try:\n",
-    "    # Creating table user_history\n",
-    "    session.execute(query)\n",
-    "    print('Table users_history created with success.')\n",
-    "except Exception as e:\n",
-    "    # Printing EXCEPTION in case of error\n",
-    "    print(e)"
+    "# appending 'user_library' on table_list\n",
+    "table_list.append(table_name)\n",
+    "\n",
+    "user_history_pm = ['song_title'] # List with partion key for user_library table\n",
+    "\n",
+    "user_history_cm = ['user_id'] # List with cluster key for user_library table\n",
+    "\n",
+    "# Running function to create table user_library on keyspace sparkify_ks\n",
+    "create_table(table_name, user_history_dict, user_history_pm, user_history_cm, session)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Table users_history created with success.\n"
+      "Table user_history created with success.\n"
      ]
     }
    ],
@@ -721,47 +671,15 @@
    "cell_type": "code",
    "execution_count": 15,
    "source": [
-    "with open(file, encoding = 'utf-8') as f:\n",
-    "    csvreader = csv.reader(f)\n",
-    "    next(csvreader)\n",
-    "\n",
-    "    for line in csvreader:\n",
-    "    ## Assigning the INSERT statement into the `query` variable\n",
-    "        query = \"\"\"\n",
-    "            INSERT INTO users_history\n",
-    "                (\n",
-    "                    song_title,\n",
-    "                    user_id,\n",
-    "                    first_name,\n",
-    "                    last_name     \n",
-    "                )\n",
-    "        \"\"\" \n",
-    "\n",
-    "        query += \" VALUES (%s, %s, %s, %s)\" \n",
-    "\n",
-    "        # Assigning the right values for each column on table users_history\n",
-    "        try:\n",
-    "            # Inserting values on table user_library\n",
-    "            session.execute(\n",
-    "                query,\n",
-    "                (\n",
-    "                    line[9],\n",
-    "                    int(line[10]),\n",
-    "                    line[1],\n",
-    "                    line[4]\n",
-    "                )\n",
-    "            )\n",
-    "        except Exception as e:\n",
-    "            # Printing EXCEPTION in case of error\n",
-    "            print(e)\n",
-    "print('Values inserted on table users_history.')"
+    "# Running function to insert values on table user_history\n",
+    "insert_table(file, table_name, user_history_dict, session)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Values inserted on table users_history.\n"
+      "Values inserted on table user_history.\n"
      ]
     }
    ],
@@ -778,13 +696,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "source": [
-    "## TO-DO: Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
+    "# Query 03\n",
     "query = \"\"\"\n",
     "SELECT\n",
     "    first_name,\n",
     "    last_name\n",
     "FROM\n",
-    "    users_history\n",
+    "    user_history\n",
     "WHERE\n",
     "    song_title = 'All Hands Against His Own'\n",
     "\"\"\"\n",
@@ -827,8 +745,6 @@
    "execution_count": 17,
    "source": [
     "# Dropping the tables \n",
-    "table_list = ['artist_library', 'user_library', 'users_history']\n",
-    "\n",
     "for table in table_list:\n",
     "    query = \"DROP TABLE {}\".format(table)\n",
     "    try:\n",
@@ -848,7 +764,7 @@
       "\n",
       "Table user_library dropped.\n",
       "\n",
-      "Table users_history dropped.\n",
+      "Table user_history dropped.\n",
       "\n"
      ]
     }
@@ -858,7 +774,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Close the session and cluster connection¶"
+    "### Close the session and cluster connection"
    ],
    "metadata": {}
   },
@@ -867,7 +783,8 @@
    "execution_count": 18,
    "source": [
     "session.shutdown()\n",
-    "cluster.shutdown()"
+    "cluster.shutdown()\n",
+    "print('All conections closed.')"
    ],
    "outputs": [],
    "metadata": {}
